Fix: Overlapping cards

--- a/src/app/course/forms/assignment-templates-form/assignment-templates-form.component.scss
+++ b/src/app/course/forms/assignment-templates-form/assignment-templates-form.component.scss
@@ -1,7 +1,7 @@
 #assignment-template-grid {
 	display: grid;
 	grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-	column-gap: 16px;
+	column-gap: 32px;
 	row-gap: 32px;
 	margin-top: 8px;
 }
@@ -9,8 +9,8 @@
 .assignment-template {
 	display: flex;
 	flex-direction: column;
-	background-color: rgba(211, 211, 211, 0.493);
-	width: fit-content;
+	
+	background-color: rgb(240, 240, 240);
 
 	.assignment-template-title {
 		margin-top: -16px;
@@ -27,13 +27,7 @@
 	padding-bottom: 4px;
 
 	mat-form-field {
-		width: 300px;
-	}
-
-	@media (max-width: 500px) {
-		mat-form-field {
-			width: 100%;
-		}
+		width: 100%
 	}
 }
 
